[package]
name = "worldclean"
version = "0.0.1"
edition = "2021"

[dependencies]
anvil-region = "0.8.1"
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive", "cargo"] }
env_logger = "0.11.3"
log = "0.4.21"
log-panics = "2.1.0"
named-binary-tag = "0.6.0"
pbr = "1.1.1"
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
